# EPIC_Atmospheric_Model

./: .gitignore  CMakeLists.txt
include/: epic.h  epic_datatypes.h
src/: Makefile
src/core/: epic_funcs_init.c  epic_funcs_util.c  epic_main.c  epic_timestep.c
src/mpi/: Makefile.openmpi  m_epic_functions.c
src/mpi/mpg/: CMakeLists.txt
src/rt/cdisort-2.1.3/: CMakeLists.txt  disotest
src/single/: Makefile
